# aoc2021-archive

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
day-1/: Makefile  README.md  dayOne.hs
day-2/: DayTwo.hs  Makefile  README.md  dayTwo.hs
day-3/: DayThree.hs  Makefile  README.md
day-4/: DayFour.hs  Makefile  dayfour.cabal
day-5/: DayFive.hs  Makefile
day-6/: Makefile
day-7/: Makefile
day-8/: Makefile
day-9/: Makefile  README.md
src/: four.py  lib.rs  main.rs  one.rs  seven.py  seven.rs  two.rs  utils.rs
template/: Makefile
