cabal-version:      2.4
name:               dayfour
version:            0.0.1.0
author:             o-90
maintainer:         john@demiurgemgmt.com

executable run
    main-is:  DayFour.hs
    build-depends:    base ^>=4.14.3.0
                    , split
    -- hs-source-dirs:   src
    default-language: Haskell2010
